# fastapi-jwt-oauth

./: .gitignore  README.md  init_db.py  pyproject.toml
alembic/versions/: 121e29174c41_initial_migration.py  d8280558266c_add_login_column_to_user.py
app/: main.py
app/api/: deps.py
app/api/routes/: login.py
app/core/: config.py  db.py  schemas.py
app/core/utils/: authentication_utils.py
app/infrastructure/: crud.py  models.py
